# uai_openlabel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python-package.yml
test_uai_openlabel/: test_json_schema.py  test_openlabel.py  test_required_field.py  test_types_and_constants.py  test_utils.py  utils_for_tests.py
test_uai_openlabel/test_asam_examples/: README.md  modified_19_vegetation_curve_19.1_labels.json  openlabel100_example_cuboids.json  openlabel100_test_bbox_simple.json  openlabel100_test_bbox_simple_attributes.json  test_asam_examples.py
test_uai_openlabel/test_data_types/: test_generic_data.py  test_geometric_data.py
uai_openlabel/: __init__.py  coordinate_system.py  frame.py  frame_interval.py  metadata.py  ontology.py  openlabel.py  serializer.py  tag.py  transform.py  types_and_constants.py  utils.py
uai_openlabel/data_types/: __init__.py  data_pointer_types.py  data_to_pointer_type_mapping.py  generic_data.py  geometric_data.py
uai_openlabel/elements/: action.py  context.py  element_data_pointer.py  event.py  object.py  relation.py
uai_openlabel/stream/: camera_intrinsics.py  stream.py  stream_properties.py
