[tool.poetry]
name = "uai_openlabel"
version = "0.3.4"
description = "A library to produce and parse JSONs in the OpenLABEL format."
license = "MIT"
authors = ["understand.ai <postmaster@understand.ai>"]
readme = "README.md"
repository = "https://github.com/understand-ai/uai_openlabel"
keywords = ["ASAM OpenLABEL"]
packages = [{include = "uai_openlabel"}]
include = ["uai_openlabel/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
apischema = "^0.18.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = {extras = ["d"], version = "^22.3.0"}
deepdiff = "^6.7.1"
ruff = "^0.2.0"

[tool.ruff.lint]
select = [ "E","F","W","I","N","TRY","RUF" ]
ignore = [ "E501", "E731", "TRY003", "W291" ]

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
